Connectat servidor-client

--- a/app/CLIENTE/index.html
+++ b/app/CLIENTE/index.html
@@ -5,8 +5,46 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        form{background: rgba(0,0,0,.15); padding: 0.25rem; position: fixed; bottom: 0; left: 0; right: 0; display: flex; height: 3rem; box-sizing: border-box; backdrop-filter: blur(10px)}
+        ul {list-style-type: none; margin: 0; padding: 0}
+        ul > li {padding: 0.5rem 1rem;}
+        ul > li:nth-child(odd) {background: #dcf8c6; text-align: right; font-style: italic; font-weight: 600;}
+    </style>
 </head>
 <body>
     <h1> Aplicació de XAT <h1/>
+
+
+        <ul></ul>
+        <form action="">
+            <input type="text" class="form-control" placeholder="Introduzca el mensaje">
+            <button type="sumbit" class="btn btn-primary">Enviar </button>
+        </form>
+
+        <script src="http://localhost:3000/socket.io/socket.io.js"></script>
+        <script>
+            let socket = io()
+            const form = document.querySelector('form')
+            const input = document.querySelector('input')
+            let mensajes = document.querySelector("ul")
+
+            form.addEventListener('submit', (e) => {
+                e.preventDefault()
+                if(input.value){
+                    socket.emit('chat', input.value)
+                    input.value = ""
+                }
+            })
+
+            socket.on("chat", (missatge) => {
+                let item = document.createElement("li")
+                item.textContent = missatge
+                mensajes.appendChild(item)
+                window.scrollto(0, document.body.scrollHeight)
+            })
+
+
+        </script>
 </body>
 </html>
