--- a/CLIENT/public/HTML/login.html
+++ b/CLIENT/public/HTML/login.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login con HTML5 Javascript y Css</title>
-    <link rel = "stylesheet" href = "estilos.css">
-    <script src="./login.js"></script>
+    <link rel = "stylesheet" href = "../CSS/estilosLogin.css">
+    <script src="../JS/login.js"></script>
 
 </head>
 <body>
