Afegint dades a introduir al login

--- a/CLIENT/public/HTML/login.html
+++ b/CLIENT/public/HTML/login.html
@@ -12,11 +12,13 @@
 <body>
     <div class = "container">
         <div class = "formulario">
-            <h1>Login con Javascript</h1>
+            <h1>Login amb Javascript</h1>
             <div class = "form">
                 <form>
-                    <input type="text" name = "usuario" id="usuario" class="caja" placeholder="Usuario">
+                    <input type="text" name = "usuari" id="usuari" class="caja" placeholder="Usuari">
+                    <input type="Nick" name = "nick" id="nick" class="caja" placeholder="El teu Nick">
                     <input type="password" name = "pass" id="pass" class="caja" placeholder="Password">
+                    <input type="password" name = "pass" id="pass" class="caja" placeholder="Confirma Password">
                     <button type="button" name = "Entrar" class="button" onclick=login()>Entrar</button>
                     <input type="reset" name="borrar" class="button" value="Borrar">
 
