Em passen les dades des del Front al Back, però no aconsegueixo que passi a la finestra del XAT

--- a/CLIENT/public/HTML/login.html
+++ b/CLIENT/public/HTML/login.html
@@ -17,7 +17,7 @@
                 <form>
                     <input type="text" name = "usuario" id="usuario" class="caja" placeholder="Usuario">
                     <input type="password" name = "pass" id="pass" class="caja" placeholder="Password">
-                    <button type="button" name = "Entrar" class="button" onclick=login()>Entrar</button>
+                    <button id="btnLogin" type="button" name = "Entrar" class="button" onclick=login()>Entrar</button>
                     <input  type="reset" name="borrar" class="button" value="Borrar">
 <!-- id="btnLogin" -->
                 </form>
