--- a/CLIENT/public/HTML/register.html
+++ b/CLIENT/public/HTML/register.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login con HTML5 Javascript y Css</title>
-    <link rel = "stylesheet" href = "../CSS/estilosLogin.css">
-    <script src="../JS/login.js"></script>
-
+    <link rel = "stylesheet" href = "../CSS/registerStyles.css">
+    <!-- <script src="../JS/register.js"></script> -->
+    
 </head>
 <body>
     <div class = "container">
@@ -17,12 +17,13 @@
                 <form>
                     <input type="text" name = "usuario" id="usuario" class="caja" placeholder="Usuario">
                     <input type="password" name = "pass" id="pass" class="caja" placeholder="Password">
-                    <button id="btnLogin" type="button" name = "Entrar" class="button" onclick=login()>Entrar</button>
+                    <button id="btnRegister" type="button" name = "Entrar" class="button" onclick = register()>Entrar</button>
                     <input  type="reset" name="borrar" class="button" value="Borrar">
-<!-- id="btnLogin" -->
+                    <!-- id="btnLogin" -->
                 </form>
             </div>
         </div>
     </div>
+    <script src="../JS/register.js"></script>
 </body>
 </html>
