--- a/ANITC_CLIENT/public/HTML/xat.html
+++ b/ANITC_CLIENT/public/HTML/xat.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="../CSS/xatStyles.css" />
+    <link rel="stylesheet" href="../CSS/main.css" />
 </head>
 
 <body>
@@ -18,33 +18,17 @@
     <div id="chat-container">
         <!-- <--(GENERAL) -->
 
-
-
-
         <div id="rooms">
             <h1 id="titleRooms">Rooms</h1>
-            <ul id="roomList" class="room-ul"></ul>
-            <form id="roomForm" class="room-form" onsubmit="createRoom()">
-                <!-- <h1 id="userName" class="header-username"></h1> -->
-                <input class="input" type="text" id="newRoomName" name="newRoom" placeholder="New room... " maxlength="16" spellcheck="false" autocomplete="off" required>
-                <input class="newRoomButton" type="submit" value="New">
-            </form>
-    </div>
-
-
-        <!-- <div id="messagesZone"> -->
-        <div id="xatZone">
-            <div id="xat" class="xat">
-                <!-- <ul id="previousMessages" class="xat_Ul"></ul> -->  <!-- Cambiar maquetación, se me baja la parte de Usuaris Room-->
-            </div>
         </div>
+        <div id="messagesZone">
+            <!-- <input type="text" id="message" placeholder="Message" />
+            <button id="send">Send</button> -->
 
-
+        </div>
 
         <div id="usuarisRoom">
             <h1 id="usersRoomList">Usuaris a la Sala</h1>
-            <h1 id="userName" class="header-username"></h1>   <!-- NOM DE L'USUARI EN US (mirar donde ponerlo luego )-->
-
         </div>
 
     </div>
@@ -67,15 +51,11 @@
             <div id = "actions"></div>
       </div>
       <input type = "text" id = "username" placeholder = "Username"/>
-
       <input type = "text" id = "message" placeholder = "Message"/>
       <button id = "send">Send</button> -->
 
-    <!-- <script src = "./socket.io/socket.io.js" charset="utf-8"></script> -->
-    <script src="https://cdn.socket.io/4.5.0/socket.io.min.js" integrity="sha384-7EyYLQZgWBi67fBtVxw60/OWl1kjsfrPFcaU0pp0nAh+i8FD068QogUvg85Ewy1k" crossorigin="anonymous"></script>
-    <!-- <script src = "../JS/main.js" ></script> -->
-    <script src = "../JS/rooms/newRoom.js" ></script>
-    <!-- <script src = "../JS/xat.js" charset="utf-8" ></script> -->
+    <script src="./socket.io/socket.io.js" charset="utf-8"></script>
+    <script src="../JS/chat.js" charset="utf-8"></script>
 </body>
 
 </html>
