Corregit que quan un usuari es desconnecta s'actulitza la pantalla als altres usuaris de que ha marxat

--- a/CLIENT/public/HTML/xat.html
+++ b/CLIENT/public/HTML/xat.html
@@ -9,7 +9,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="../CSS/xatStyles.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Neucha&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Marcellus&display=swap" rel="stylesheet">    <link rel="stylesheet" href="../CSS/xatStyles.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Crafty+Girls&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
     <script src="https://cdn.socket.io/4.5.0/socket.io.min.js"
         integrity="sha384-7EyYLQZgWBi67fBtVxw60/OWl1kjsfrPFcaU0pp0nAh+i8FD068QogUvg85Ewy1k"
@@ -69,10 +74,19 @@
             </form> -->
         </div>
         <div id="usuarisRoom">
-            <h1 id="usersRoomList">Usuaris a la Sala</h1>
-            <h1 id="showCurrentRoom"></h1> <!-- NO MOSTRA LA CURRENT ROOM -->
+<!--             <h1 id="usersRoomList">Usuaris a la Sala</h1>
+            <h1 id="showCurrentRoom"></h1>
             <h1 id="userName" class="header-username"></h1>
-            <!--  NOM DE L'USUARI EN US (mirar donde ponerlo luego ) CLIENT/HTML/MAIN.JS -->
+            <ul id="usersList" class="room"></ul> -->
+
+
+            <h1> Sala: </h1> <h1 id="showCurrentRoom"></h1>
+            <hr style="color: black; background-color: black; width:75%;" />
+
+            <h1 id="userName" class="header-username"></h1>
+            <hr style="color: black; background-color: black; width:75%;" />
+            <h1> Usuaris: </h1>
+            <!-- <h1> Usuaris: </h1> -->
             <ul id="usersList" class="room"></ul>
 
         </div>
