No havia pujat la part del CLIENT

--- a/CLIENT/public/HTML/xat.html
+++ b/CLIENT/public/HTML/xat.html
@@ -103,7 +103,10 @@
     <form id="newMessages" class="xatForm">
         <input type="text" id="newMessage" name="newMessage" placeholder="Message" />
         <button id="send" type="button" onclick="sendMessage()">Send</button>
+        
+        <!-- notificationRoom -->
     </form>
+    <div class="data"><span id="notificationRoom" class="error"></span></div>
 
     <!-- <input type="text"  id="message" placeholder="Message" />
     <button id = "send"  onsubmit = "newMessage" >Send</button> -->
